[package]
name = "delimiter-slice"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Leinz <caleb.leinz@atlasspace.com>"]
description = "Stream type for splitting a delimited stream"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.13"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
